--- a/.github/workflows/go_lint.yaml
+++ b/.github/workflows/go_lint.yaml
@@ -1,10 +1,10 @@
 name: go_build_lint_and_test
 
-on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+#on:
+#  push:
+#    branches: [ main, master ]
+#  pull_request:
+#    branches: [ main, master ]
 
 jobs:
   build-and-test:
